--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1952,6 +1952,12 @@ td .btn-group {
     margin-bottom: 5px;
 }
 
+/***********************************SUMMER NOTE FIX***************************/
+.note-btn-group .btn-group {
+    margin-bottom: 0px !important;
+}
+
+
 td.td-bottom-multiselect .btn-group {
     margin-bottom: 5px;
     position: absolute;
@@ -3595,7 +3601,13 @@ div.DTFC_LeftFootWrapper table {
     border: 1px solid #dddddd;
 }
 
-
+/***SUMMER NOTE******/
+.note-editor.note-frame {
+    padding: 0px !important;
+    margin-bottom: 20px;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+}
 
 .panel-heading {
     padding: 10px 15px;
@@ -4289,4 +4301,19 @@ div.chosen-container.chosen-container-single.error {
 
 .caselog .log-files a {
     margin-bottom: 10px;
+}
+
+.summernote-desc-flex-container {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    -ms-box-orient: horizontal;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
 }
