--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -70,7 +70,7 @@
                                             @*href="@GetLogLink(r)"*@
                                             <div style="display:block;">
                                                 <div style="display: inline;">
-                                                    @Html.Encode(r.TextExternal).ForHtmlView()
+                                                    @Html.Raw(r.TextExternal)
                                                 </div>
                                             </div>
                                         </a>
@@ -86,7 +86,7 @@
                                             @*href="@GetLogLink(r)"*@
                                             <div style="display:block;">
                                                 <div style="display: inline;">
-                                                    @Html.Encode(r.TextInternal).ForHtmlView()
+                                                    @Html.Raw(r.TextInternal)
                                                 </div>
                                             </div>
                                         </a>
