--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/_Input.cshtml
@@ -472,6 +472,9 @@
 
                                 @Html.Action("MailTemplateFieldIdentifierRow", new { customerId = Model.Customer.Id, mailTemplateRowName = GlobalEnums.TranslationCaseFields.Performer_User_Id.ToString(), Extralabel = "Förnamn", EMailIdentifier = "[#6]" });
                                 @Html.Action("MailTemplateFieldIdentifierRow", new { customerId = Model.Customer.Id, mailTemplateRowName = GlobalEnums.TranslationCaseFields.Performer_User_Id.ToString(), Extralabel = "Efternamn", EMailIdentifier = "[#7]" });
+                                @Html.Action("MailTemplateFieldIdentifierRow", new { customerId = Model.Customer.Id, mailTemplateRowName = GlobalEnums.TranslationCaseFields.Performer_User_Id.ToString(), Extralabel = "Telefon", EMailIdentifier = "[#70]" });
+                                @Html.Action("MailTemplateFieldIdentifierRow", new { customerId = Model.Customer.Id, mailTemplateRowName = GlobalEnums.TranslationCaseFields.Performer_User_Id.ToString(), Extralabel = "Mobil", EMailIdentifier = "[#71]" });
+                                @Html.Action("MailTemplateFieldIdentifierRow", new { customerId = Model.Customer.Id, mailTemplateRowName = GlobalEnums.TranslationCaseFields.Performer_User_Id.ToString(), Extralabel = "E-post", EMailIdentifier = "[#72]" });
                                 @Html.Action("MailTemplateFieldIdentifierRow", new { customerId = Model.Customer.Id, mailTemplateRowName = GlobalEnums.TranslationCaseFields.Priority_Id.ToString() });
                                 <tr>
                                     <td>
