--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -502,24 +502,30 @@
 
                         }
                     }
-            }
-
+        }
 
             return rules;
     }
 
+
     var validator = $("#target").validate({
-        ignore: "",
+        ignore: ".note-editor *",
         rules: getRules(),
         groups: {
             time: "CaseLog.WorkingTimeHour CaseLog.WorkingTimeMinute CaseLog.OvertimeHour CaseLog.OvertimeMinute",
             logInput: "CaseLog.TextExternal CaseLog.TextInternal"
         },
-        errorPlacement: function(error, element) {
+        errorPlacement: function (error, element) {
+
+
             if (element.hasClass("time-field")) {
                 $("#timeValidationMessage").html(error);
             } else if (element.hasClass("cost-field")) {
                 $("#costValidationMessage").html(error);
+            } else if (element.hasClass("summernoteinternal") || element.hasClass("summernotedesc") || element.hasClass("summernoteexternal")) {
+                error.insertAfter(element.siblings(".note-editor"));
+                
+
             } else {
                 if (element.is("select.chosen-single-select")) {
                     error.insertAfter($("#" + element.attr("id") + "_chosen"));
@@ -529,6 +535,27 @@
                 } else {
                     error.insertAfter(element);
                 }
+            }
+        },
+        highlight: function (element, errorClass, validClass) {
+
+            if ($(element).hasClass("summernoteinternal") || $(element).hasClass("summernotedesc") || $(element).hasClass("summernoteexternal")) {
+
+                $(element).siblings(".note-editor").addClass("error")
+
+            } else {
+
+                $(element).addClass("error");
+            }
+        },
+        unhighlight: function (element, errorClass, validClass) {
+
+            if ($(element).hasClass("summernoteinternal") || $(element).hasClass("summernotedesc") || $(element).hasClass("summernoteexternal")) {
+
+                $(element).siblings(".note-editor").removeClass("error")
+
+            } else {
+                $(element).removeClass("error");
             }
         },
         messages: {
@@ -763,7 +790,8 @@
                 utils.noText = noText;
             },
 
-            showMessage: function(message, type) {
+            showMessage: function (message, type) {
+
                 $().toastmessage('showToast',
                 {
                     text: utils.replaceAll(message, '|', '<br />'),
@@ -795,7 +823,9 @@
 
         var $form = $('#target');
 
-        var getValidationErrorMessage = function(extraMessage) {
+    var getValidationErrorMessage = function (extraMessage) {
+
+
             var validationMessages = window.parameters.casesScopeInitParameters.validationMessages || '';
             var requiredFieldsMessage = window.parameters.casesScopeInitParameters.requiredFieldsMessage || '';
             var mandatoryFieldsText = window.parameters.casesScopeInitParameters.mandatoryFieldsText || '';
@@ -817,7 +847,9 @@
             return messages.join('');
         };
 
-        var isFormValid = function() {
+    var isFormValid = function () {
+
+
             if (!$form.valid()) {
                 utils.showError(getValidationErrorMessage());
                 return false;
@@ -830,5 +862,9 @@
         });
     </text>
     }
+
+    $("#case__Description-error").live("click", function () {
+        $(".summernotedesc").summernote("focus");
+    });
 
 </script>
