--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -117,13 +117,13 @@
                     @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote) && !readonlyMode)
                     {
                         <div id="textExternalOuter" style="width: 100%; height:100%; min-width: 320px; min-height: 200px">
-                            @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { @class = "summernote" })
+                            @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { @class = "summernoteexternal" })
                         </div>
                     }
                     else
                     {
                         <div id="textExternalOuter" style="width: 100%; height:100%">
-                            @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { @class = "summernote", @readonly = true })
+                            @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { @class = "summernoteexternal", @readonly = true })
                         </div>
                     }
                 </td>
@@ -176,13 +176,13 @@ Model.EnableTwoAttachments))
                         @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
                         {
                             <div id="textInternalOuter" style="width: 100%; height:100%; min-width: 320px; min-height: 200px">
-                                @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { @class = "summernote" })
+                                @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { @class = "summernoteinternal" })
                             </div>
                         }
                         else
                         {
                             <div id="textInternalOuter" style="width: 100%; height:100%; min-width: 320px; min-height: 200px">
-                                @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { @class = "summernote", @readonly = true })
+                                @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { @class = "summernoteinternal", @readonly = true })
                             </div>
                         }
                     </td>
